--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "chat-me-angular": {
+    "scorpio-fe": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/chat-me-angular",
+            "outputPath": "dist/scorpio-fe",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -67,19 +67,19 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "chat-me-angular:build",
+            "browserTarget": "scorpio-fe:build"
 
           },
           "configurations": {
             "production": {
-              "browserTarget": "chat-me-angular:build:production"
+              "browserTarget": "scorpio-fe:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "chat-me-angular:build"
+            "browserTarget": "scorpio-fe:build"
           }
         },
         "test": {
@@ -116,16 +116,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "chat-me-angular:serve"
+            "devServerTarget": "scorpio-fe:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "chat-me-angular:serve:production"
+              "devServerTarget": "scorpio-fe:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "chat-me-angular"
+  "defaultProject": "scorpio-fe"
 }
