--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/router": "~9.0.7",
     "@auth0/angular-jwt": "^5.0.2",
     "@types/jquery": "^3.5.5",
+    "angularfire2": "^5.4.2",
     "bootstrap": "^4.5.3",
+    "firebase": "^7.24.0",
     "jquery": "^3.5.1",
     "net": "^1.0.2",
     "popper.js": "^1.16.1",
