--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "firebase": "^7.24.0",
     "jquery": "^3.5.1",
     "net": "^1.0.2",
+    "ng-multiselect-dropdown": "^0.3.9",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "sockjs-client": "^1.5.0",
